# passeport

./: .gitignore  DERIVATION.md  NOTICE  README.md  TODO.md
.github/workflows/: ci.yml  pages.yml  release.yml
Passeport.xcodeproj/: project.pbxproj
Passeport.xcodeproj/xcshareddata/xcschemes/: Passeport.xcscheme
Resources/: Info.plist  Passeport.entitlements
Resources/Media.xcassets/PasseportLogo.imageset/: Contents.json
Resources/Media.xcassets/Symbolic.imageset/: Contents.json
Resources/Passeport.help/Contents/: Info.plist
Resources/Passeport.icon/: icon.json
Sources/PasseportApp/App/: PasseportApp.swift
Sources/PasseportApp/Bridge/: PublicCardCache.swift  SSHAgentServer.swift  ScdBridge.swift
Sources/PasseportApp/Core/: CoreClient.swift  CoreLocator.swift  DerivedIdentity.swift  DeterminismCheck.swift  OperationMetadata.swift  PasseportError.swift
Sources/PasseportApp/Integrations/: AgeConfigurator.swift  GitConfigurator.swift  GnuFreeGPGConfigurator.swift  GnuPGConfigurator.swift  IntegrationTester.swift  LaunchAgentInstaller.swift  MinisignConfigurator.swift  SSHConfigurator.swift  ToolingInstaller.swift
Tests/PasseportTests/: ClassificationTests.swift  GnuPGConfiguratorTests.swift
Tests/PasseportUITests/: PasseportUITests.swift
crates/passeport-core/: Cargo.toml
crates/passeport-core/src/: age.rs  age_cli.rs  age_plugin.rs  gpg.rs  handoff.rs  identity.rs  main.rs  minisign.rs  minisign_cli.rs  ops.rs  pgp_sign.rs  scd.rs
docs/: index.html  style.css
scripts/: build-rust-helper.sh  bundle-tooling.sh  install-tooling.sh  make-dmg.sh
(+20 files in other folders)
