[package]
name = "passeport-core"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "passeport-core"
path = "src/main.rs"

[dependencies]
anyhow = "1"
age-lib = { package = "age", version = "0.11.3", features = ["armor"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ed25519-dalek = "2"
hex = "0.4"
hkdf = "0.12"
libc = "0.2"
pgp = "0.14"
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ssh-key = { version = "0.6", features = ["ed25519"] }
zeroize = { version = "1", features = ["zeroize_derive"] }
bip39 = { version = "2.2.2", default-features = false, features = ["std"] }
bech32 = "0.11"
chacha20poly1305 = "0.10"
blake2 = "0.10"
